sventon change history
-----------------------------------------------------------------------------------------

[1488] Release 2.0.2 (2009-02-10)
[1482] Fixed: Bug #15238 - EntryCache population bug.
[1476] Fixed: Bug #15182 - Append trailing slash to URL.
[1475] Fixed: Bug #15155 - Cache not flushed after updating 'lastUpdatedRevision'.

[1467] Release 2.0.1 (2009-01-25)
[1462] Added: Feature #4453 - Add link to admin page if enabled.
[1460] Fixed: Bug #15086 - User based auth broken.

[1456] Release 2.0.0 (2009-01-19)
[1443] Added: Upgraded to SVNKit 1.2.2.
[1425] Added: Feature #4407 - Add options to Log View.
[1421] Added: Upgraded to Spring 2.5.6.
[1418] Added: Feature #2747 - Asynchronous exports.
[1412] Fixed: Bug #5604 - Not possible to diff over paged logs.
[1411] Added: Feature #4400 - Age popup on all printed dates.
[1410] Added: Feature #4354 - Point out sventon dir using a property (sventon.dir).
[1409] Fixed: Bug #12687 - Cannot have more than one sventon instance per container.
[1408] Added: Feature #4221 - Possibility to decide default diff view.
[1393] Added: Feature #3022 - Add admin control.
[1333] Fixed: Bug #14244 - Revision zero not considered.
[1321] Added: Feature #4182 - Friendly URLs.
[1246] Added: Feature #3499 - Diff tags.
[1407] Fixed: Bug #14799 - Unnecessary recreation of thumbnails.

[1390] Release 1.4.1 (2008-10-01)
[1385] Added: Upgraded to SVNKit 1.2.0.
[1358] Fixed: Bug #14342 - Version number not displayed properly on Glassfish.

[1339] Release 1.4.0 (2008-07-25)

[1319] Release 1.4 RC6 (2008-07-09)
[1315] Fixed: Bug #14171 - Thumbnails are not shown when using user based auth.
[1314] Fixed: Bug #14151 - Thumbnails are not shown when cache is disabled.
[1308] Fixed: Bug #14129 - Multi-byte characters not correctly rendered in source files.

[1291] Release 1.4 RC5 (2008-05-25)
[1288] Fixed: Bug #13881 - RSS component not working when using user based auth.
[1286] Fixed: Bug #13870 - Not possible to link to a specific row.