@@ -45,7 +45,7 @@ public class EntryCacheTest extends TestCase {
     cache.add(TestUtils.getDirectoryList());
     assertEquals(13, cache.getSize());
 
-    assertEquals(2, cache.findEntry("tag", "/tags/").size());
+    assertEquals(2, cache.findEntries("tag", "/tags/", false).size());
   }
 
   public void testEntryCacheRemove() throws Exception {
@@ -54,23 +54,23 @@ public class EntryCacheTest extends TestCase {
     cache.add(TestUtils.getDirectoryList());
     assertEquals(13, cache.getSize());
 
-    cache.removeByName("/file1.java", false);
+    cache.removeEntry("/file1.java", false);
     assertEquals(12, cache.getSize());
 
     // Try to remove again
-    cache.removeByName("/file1.java", false);
+    cache.removeEntry("/file1.java", false);
     assertEquals(12, cache.getSize());
 
     // Recursive must not matter in this case (entry is a file)
-    cache.removeByName("/file2.html", true);
+    cache.removeEntry("/file2.html", true);
     assertEquals(11, cache.getSize());
 
     // Remove the 'trunk' recursively (trailing slash keeps the dir itself)
-    cache.removeByName("/trunk/", true);
+    cache.removeEntry("/trunk/", true);
     assertEquals(4, cache.getSize());
 
     // Remove the 'tags' recursively (without trailing slash everything is deleted)
-    cache.removeByName("/tags", true);
+    cache.removeEntry("/tags", true);
     assertEquals(1, cache.getSize());
   }
 
@@ -80,18 +80,18 @@ public class EntryCacheTest extends TestCase {
     cache.add(TestUtils.getDirectoryList());
     assertEquals(13, cache.getSize());
 
-    assertEquals(5, cache.findByPattern(Pattern.compile(".*[12].*"), ANY).size());
-    assertEquals(5, cache.findByPattern(Pattern.compile(".*[12].*"), FILE).size());
-    assertEquals(0, cache.findByPattern(Pattern.compile(".*[12].*"), DIR).size());
+    assertEquals(5, cache.findEntriesByPattern(Pattern.compile(".*[12].*"), ANY).size());
+    assertEquals(5, cache.findEntriesByPattern(Pattern.compile(".*[12].*"), FILE).size());
+    assertEquals(0, cache.findEntriesByPattern(Pattern.compile(".*[12].*"), DIR).size());
 
-    assertEquals(8, cache.findByPattern(Pattern.compile(".*trunk.*"), ANY).size());
-    assertEquals(3, cache.findByPattern(Pattern.compile(".*trunk.*"), DIR).size());
+    assertEquals(8, cache.findEntriesByPattern(Pattern.compile(".*trunk.*"), ANY).size());
+    assertEquals(3, cache.findEntriesByPattern(Pattern.compile(".*trunk.*"), DIR).size());
 
-    assertEquals(4, cache.findByPattern(Pattern.compile(".*"), DIR).size());
+    assertEquals(4, cache.findEntriesByPattern(Pattern.compile(".*"), DIR).size());
 
-    assertEquals(1, cache.findByPattern(Pattern.compile(".*/trunk/src/.*"), FILE).size());
+    assertEquals(1, cache.findEntriesByPattern(Pattern.compile(".*/trunk/src/.*"), FILE).size());
 
-    assertEquals(1, cache.findByPattern(Pattern.compile(".*/TrUnK/sRc/.*", Pattern.CASE_INSENSITIVE), FILE).size());
+    assertEquals(1, cache.findEntriesByPattern(Pattern.compile(".*/TrUnK/sRc/.*", Pattern.CASE_INSENSITIVE), FILE).size());
   }
 
   private void print(List<RepositoryEntry> entries) {
